finished button onClick

--- a/src/Product.css
+++ b/src/Product.css
@@ -25,11 +25,11 @@
 .fa-solid{
     margin-left: 10px;
 }
-.fa-rotate-180{
+.fa-circle-chevron-left{
     margin-left: 10px;
     color: white;
 }
-.fa-color{
+.fa-circle-chevron-right{
     margin-left: 10px;
     color:lightskyblue
 }
