organize and comments

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,7 +1,9 @@
 body{
   text-align: center ;
-  background: lightgray;
+  background-color: #ffffff;
+  background-image: linear-gradient(315deg, #ffffff 0%, #d7e1ec 74%);
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
 }
 
 .container{
